v1.10.x/connectors/database/oracle/yaml.mdx
---
title: Run the Oracle Connector Externally
description: Configure Oracle connector with YAML to ingest schemas, tables, and column metadata with access control.
slug: /connectors/database/oracle/yaml
sidebarTitle: Run Externally
mode: "wide"
---
import { ConnectorDetailsHeader } from '/snippets/components/ConnectorDetailsHeader/ConnectorDetailsHeader.jsx'
import { CodePreview, ContentPanel, ContentSection, CodePanel } from '/snippets/components/CodePreview.jsx'
import AutoClassification from '/snippets/connectors/yaml/auto-classification.mdx'
import DataProfiler from '/snippets/v1.10.x/connectors/yaml/data-profiler.mdx'
import Lineage from '/snippets/connectors/yaml/lineage.mdx'
import IngestionSinkDef from '/snippets/connectors/yaml/ingestion-sink-def.mdx'
import WorkflowConfigDef from '/snippets/connectors/yaml/workflow-config-def.mdx'
import IngestionCli from '/snippets/connectors/yaml/ingestion-cli.mdx'
import PythonRequirements from '/snippets/connectors/python-requirements.mdx'
import ExternalIngestionDeployment from '/snippets/v1.10.x/connectors/external-ingestion-deployment.mdx'
import IngestionSink from '/snippets/connectors/yaml/ingestion-sink.mdx'
import WorkflowConfig from '/snippets/connectors/yaml/workflow-config.mdx'
import SourceConfigDef from '/snippets/connectors/yaml/database/source-config-def.mdx'
import SourceConfig from '/snippets/connectors/yaml/database/source-config.mdx'
import DataQuality from '/snippets/connectors/yaml/data-quality.mdx'

<ConnectorDetailsHeader
icon='/public/images/connectors/oracle.webp'
name="Oracle"
stage="PROD"
availableFeatures={["Metadata", "Query Usage", "Data Profiler", "Data Quality", "dbt", "Lineage", "Column-level Lineage", "Stored Procedures", "Sample Data", "Reverse Metadata (OpenMetadata Only)", "Auto-Classification"]}
unavailableFeatures={["Owners", "Tags"]} />
In this section, we provide guides and references to use the Oracle connector.
Configure and schedule Oracle metadata and profiler workflows from the OpenMetadata UI:
- [Requirements](#requirements)
- [Metadata Ingestion](#metadata-ingestion)
- [Data Profiler](#data-profiler)
- [Data Quality](#data-quality)
- [Lineage](#lineage)
- [dbt Integration](#dbt-integration)
- [Reverse Metadata](/applications/reverse-metadata)
<ExternalIngestionDeployment />
## Requirements
**Note**: To retrieve metadata from an Oracle database, we use the `python-oracledb` library, which provides support for versions 12c, 18c, 19c, and 21c.
To ingest metadata from oracle user must have `CREATE SESSION` privilege for the user.
```sql
-- CREATE USER
CREATE USER user_name IDENTIFIED BY admin_password;
-- CREATE ROLE
CREATE ROLE new_role;
-- GRANT ROLE TO USER
GRANT new_role TO user_name;
-- Grant CREATE SESSION Privilege.
--   This allows the role to connect.
GRANT CREATE SESSION TO new_role;
-- Grant SELECT_CATALOG_ROLE Privilege.
--   This allows the role ReadOnly Access to Data Dictionaries
GRANT SELECT_CATALOG_ROLE TO new_role;
```
If you don't want to create a role, and directly give permissions to the user, you can take a look at an example given below.
```sql
-- Create a New User
CREATE USER my_user IDENTIFIED by my_password;
-- Grant CREATE SESSION Privilege.
--   This allows the user to connect.
GRANT CREATE SESSION TO my_user;
-- Grant SELECT_CATALOG_ROLE Privilege.
--   This allows the user ReadOnly Access to Data Dictionaries
GRANT SELECT_CATALOG_ROLE to my_user;
```
**Note**: With just these permissions, your user should be able to ingest the metadata, but not the `Profiler & Data Quality`, you should grant `SELECT` permissions to the tables you are interested in for the `Profiler & Data Quality` features to work.
```sql
-- If you are using a role and do not want to specify a specific table, but any
GRANT SELECT ANY TABLE TO new_role;
-- If you are not using a role, but directly giving permission to the user and do not want to specify a specific table, but any
GRANT SELECT ANY TABLE TO my_user;
-- if you are using role
GRANT SELECT ON ADMIN.EXAMPLE_TABLE TO new_role;
-- if you are not using role, but directly giving permission to the user
GRANT SELECT ON ADMIN.EXAMPLE_TABLE TO my_user;
-- if you are using role
GRANT SELECT ON {schema}.{table} TO new_role;
-- if you are not using role, but directly giving permission to the user
GRANT SELECT ON {schema}.{table} TO my_user;
```
You can find further information [here](https://docs.oracle.com/javadb/10.8.3.0/ref/rrefsqljgrant.html). Note that
there is no routine out of the box in Oracle to grant SELECT to a full schema.
### Python Requirements
<PythonRequirements />
To run the Oracle ingestion, you will need to install:
```bash
pip3 install "openmetadata-ingestion[oracle]"
```
## Metadata Ingestion
All connectors are defined as JSON Schemas.
[Here](https://github.com/open-metadata/OpenMetadata/blob/main/openmetadata-spec/src/main/resources/json/schema/entity/services/connections/database/oracleConnection.json)
you can find the structure to create a connection to Oracle.
In order to create and run a Metadata Ingestion workflow, we will follow
the steps to create a YAML configuration able to connect to the source,
process the Entities if needed, and reach the OpenMetadata server.
The workflow is modeled around the following
[JSON Schema](https://github.com/open-metadata/OpenMetadata/blob/main/openmetadata-spec/src/main/resources/json/schema/metadataIngestion/workflow.json)
### 1. Define the YAML Config

This is a sample config for Oracle:

<CodePreview>

<ContentPanel>

<ContentSection id={1} title="Source Configuration" lines="1-3">

Configure the source type and service name for your Oracle connector.

</ContentSection>

<ContentSection id={2} title="Username" lines="8">

**username**: Specify the User to connect to Oracle. It should have enough privileges to read all the metadata.

</ContentSection>

<ContentSection id={3} title="Password" lines="9">

**password**: Password to connect to Oracle.

</ContentSection>

<ContentSection id={4} title="Host Port" lines="7">

**hostPort**: Enter the fully qualified hostname and port number for your Oracle deployment in the Host and Port field.

</ContentSection>

<ContentSection id={5} title="Oracle Connection Type" lines="11-13">

**oracleConnectionType** :

- **oracleServiceName**: The Oracle Service name is the TNS alias that you give when you remotely connect to your database and this Service name is recorded in tnsnames.
- **databaseSchema**: The name of the database schema available in Oracle that you want to connect with.
- **Oracle instant client directory**: The directory pointing to where the `instantclient` binaries for Oracle are located. In the ingestion Docker image we provide them by default at `/instantclient`. If this parameter is informed (it is by default), we will run the [thick oracle client](https://python-oracledb.readthedocs.io/en/latest/user_guide/initialization.html#initializing-python-oracledb).

We are shipping the binaries for ARM and AMD architectures from [here](https://www.oracle.com/database/technologies/instant-client/linux-x86-64-downloads.html) and [here](https://www.oracle.com/database/technologies/instant-client/linux-arm-aarch64-downloads.html) for the instant client version 19.

</ContentSection>

<ContentSection id={6} title="Database Name" lines="14">

**databaseName**: Optional name to give to the database in OpenMetadata. If left blank, we will use default as the database name. It is recommended to use the database name same as the SID, This ensures accurate results and proper identification of tables during profiling, data quality checks and dbt workflow.

</ContentSection>

<ContentSection id={7} title="Connection Options" lines="15">

#### Advanced Configuration

**Connection Options (Optional)**: Enter the details for any additional connection options that can be sent to database during the connection. These details must be added as Key-Value pairs.

</ContentSection>

<ContentSection id={8} title="Connection Arguments" lines="16">

**Connection Arguments (Optional)**: Enter the details for any additional connection arguments such as security or protocol configs that can be sent to database during the connection. These details must be added as Key-Value pairs.

- In case you are using Single-Sign-On (SSO) for authentication, add the `authenticator` details in the Connection Arguments as a Key-Value pair as follows: `"authenticator" : "sso_login_url"`

</ContentSection>

<ContentSection id={9} title="Source Config" lines="19-62">

<SourceConfigDef />

</ContentSection>

<ContentSection id={10} title="Sink Configuration" lines="63-65">

<IngestionSinkDef />

</ContentSection>

<ContentSection id={11} title="Workflow Configuration" lines="66-82">

<WorkflowConfigDef />

</ContentSection>

</ContentPanel>

<CodePanel fileName="oracle_config.yaml">

```yaml
source:
  type: oracle
  serviceName: local_oracle
  serviceConnection:
    config:
      type: Oracle
      hostPort: hostPort
      username: username
      password: password
      # The type can either be oracleServiceName or databaseSchema
      oracleConnectionType:
        oracleServiceName: serviceName
        # databaseSchema: schema
      databaseName: custom_db_display_name
      # connectionOptions:
      #   key: value
      # connectionArguments:
      #   key: value
```

<SourceConfig />

<IngestionSink />

<WorkflowConfig />

</CodePanel>

</CodePreview>

<IngestionCli />
<DataProfiler connector="oracle" />
<AutoClassification connector="oracle" />
<DataQuality />
<Lineage connector="oracle" />
## dbt Integration
<Columns cols={2}>
<Card title="dbt Integration" href="/v1.10.x/connectors/ingestion/workflows/dbt">
  Learn more about how to ingest dbt models
</Card>
</Columns>
